syntax="proto3";

package blog;

option go_package="github.com/sandeepchowdary7/go-grpc/blog/proto";

import "google/protobuf/empty.proto";

message Blog {
  string id=1;
  string author_id=2;
  string title=3;
  string content=4;
}

message BlogId {
  string id=1;
}

service BlogService {
  rpc CreateBlog(Blog) returns (BlogId);
  rpc UpdateBlog(Blog) returns (google.protobuf.Empty);
  rpc ReadBlog(BlogId) returns (Blog);
  rpc DeleteBlog(BlogId) returns (google.protobuf.Empty);
  rpc ListAllBlogs (google.protobuf.Empty) returns (stream Blog);
}